Fixed tablet media query - logo was cut off and tightend up spacing

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -106,7 +106,7 @@ img {
   .headerLogo {
     background-image: url(images/cvInternshipMedium.png);
     padding-top: 100px;
-    padding-bottom: 40px;
+    padding-bottom: 1px;
     margin-top: 30px;
   }
 
